--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <div class="linha">
 
             <div class="col-3">
-                <img src="assets/img/geral classe produtos/RoupasMasculinas/Blusa de Moletom Flanelada Canguru Use Miron Capuz Preto.jpg" alt="">
+                <img src="assets/img/categoria-2.jpg" alt="">
             </div>
 
             <div class="col-3">
